@@ -479,7 +479,8 @@ void c_prot_nntp::nntp_dogroup(int getheaders){
 
 		c_nntp_server_info* servinfo=gcache->getserverinfo(connection->server->serverid);
 		assert(servinfo);
-		if (servinfo->high!=0 && connection->server->fullxover==2){
+		//shouldn't do fullxover2 on first update of group or if cached headers are ALL older than available headers
+		if (servinfo->high!=0 && servinfo->high>=low && connection->server->fullxover==2){
 			c_nrange existing;
 			dolistgroup(existing, low, high, num);
 
